Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88673

REG: Major performance regression for shader effects

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.0
    • 6.0.0 Beta2
    • Qt RHI, Quick: Other
    • None
    • All
    • f95b99902fae6e53a9da5fbccb6e1616299fb3bf (qt/qtdeclarative/dev) 9c733e3944e93c7eb7c9e1f4dcd22dce3d34206e (qt/qtdeclarative/6.0)

      Visible in qmlbench, there is a major regression in the creation benchmarks for shader effects.

      For instance, in the main ShaderEffect example, there is a 75% regression:

      Link to dashboard

        1. shadereffects.png
          21 kB
          Eskil Abrahamsen Blomfeldt
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes